spin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spin-ingress
  namespace: spinnaker-system
  labels:
    app: spin
    cluster: spin-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: spinnakergke.zeusconsulting.net
    http:
      paths:
      - backend:
          serviceName: spin-deck
          servicePort: 9000
        path: /
  - host: apigke.zeusconsulting.net
    http:
      paths:
      - backend:
          serviceName: spin-gate
          servicePort: 8084
        path: /
